fix: visible height of expander in open state should match closed

--- a/packages/jokul/src/components/expander/styles/expandable.scss
+++ b/packages/jokul/src/components/expander/styles/expandable.scss
@@ -17,6 +17,10 @@
         height: 0;
     }
 
+    &[data-visible-content="true"] .jkl-expander {
+        border-bottom: 1px solid transparent;
+    }
+
     &__content-wrapper {
         padding: jkl.rem(16px);
     }
